--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Animated biography for Auri, a 16-year-old music producer and developer from Weimar blending 01099-style beats with secure web tech experiments." />
+    <meta name="description" content="Portfolio for Auri Loco, a music producer and developer delivering polished recordings and secure digital solutions." />
     <title>Auri &middot; Bio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,7 +27,6 @@
                 <a href="#release">Release</a>
                 <a href="#about">About</a>
                 <a href="#timeline">Journey</a>
-                <a href="#skills">Skills</a>
                 <a href="#contact">Contact</a>
                 <a href="#impressum">Impressum</a>
             </nav>
@@ -46,11 +45,10 @@
                     <p class="eyebrow">Biography</p>
                     <h1>
                         Hey, I'm <span class="gradient-text">Auri</span><br />
-                        Music Artist & Dev from Erfurt.
+                        Music Artist & Developer in Erfurt.
                     </h1>
                     <p class="lead">
-                        With FL Studio I craft interactive sounds,
-                        hooks, vocal chains, and web experiments.
+                        I produce contemporary pop and hip-hop releases and create secure digital tools for artists and partners.
                     </p>
                     <div class="hero__actions">
                         <a class="btn primary" href="#contact">Email me</a>
@@ -73,10 +71,10 @@
                         <img src="assets/img/album.png" alt="Album cover for Lila Fanta" loading="lazy" />
                     </div>
                     <div class="release__info reveal" data-delay="120">
-                        <span class="release__meta">New Single</span>
+                        <span class="release__meta">Latest Release</span>
                         <h2 class="section__title">LILA FANTA</h2>
                         <p>
-                            My first single is now on Spotify. Catch the preview here and let me know how the vibe lands for you.
+                            Stream the current single and reach out for licensing, remix, or production inquiries.
                         </p>
                         <div class="release__player" data-player>
                             <button class="player__control player__play" type="button" aria-label="Play track">
@@ -106,27 +104,37 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">Between studio and command line.</h2>
+                    <h2 class="section__title">Studio-led, tech-enabled.</h2>
                     <p>
-                        I'm based in Germany and chasing the jump into music production or audio engineering.
-                        When I'm not studying, I'm in FL Studio shaping melodic 100-130 BPM grooves inspired by 01099 and Jazeek.
+                        I deliver end-to-end music production for artists and brands, from songwriting and vocal direction through to mix preparation and release support.
                     </p>
                     <p>
-                    
+                        Alongside the studio I advise on secure infrastructure and automation that keeps creative operations dependable and compliant.
+                    </p>
                 </div>
                 <div class="about__cards reveal" data-delay="120">
                     <article class="card">
-                        <h3>Workflow Staples</h3>
+                        <h3>Workflow</h3>
                         <ul>
-                            <li>FL Studio sessions in 100-130 BPM</li>
-                            <li>Hybrid audio & security tooling</li>
+                            <li>Structured pre-production and songwriting sprints</li>
+                            <li>Session versioning with clear deliverables</li>
+                            <li>Transparent project communication</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Focus Areas</h3>
                         <ul>
-                            <li>01099-inspired tracks & EPs</li>
-                            <li>Vocal chains & mixing templates</li>
+                            <li>Single and EP production</li>
+                            <li>Artist development and coaching</li>
+                            <li>Audio post for campaigns and events</li>
+                        </ul>
+                    </article>
+                    <article class="card">
+                        <h3>Technical Services</h3>
+                        <ul>
+                            <li>Secure API architecture for creative platforms</li>
+                            <li>Automation of release workflows</li>
+                            <li>Privacy-first data handling strategies</li>
                         </ul>
                     </article>
                 </div>
@@ -140,78 +148,31 @@
                     <div class="timeline__line" aria-hidden="true"></div>
                     <article class="timeline__item reveal" data-delay="0">
                         <span class="timeline__year">2025</span>
-                        <h3>Secure beat tools</h3>
+                        <h3>Collaboration security</h3>
                         <p>
-                            Building secure token login flows for Roblox scripts so my beat community can share protected sessions.
+                            Rolled out authentication frameworks for partner portals so production assets stay protected during review cycles.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="120">
                         <span class="timeline__year">2024</span>
-                        <h3>Studio upgrades & vocal chains</h3>
+                        <h3>Release-ready productions</h3>
                         <p>
-                            Powered my setup with ESI U22 XT, Neumann XLR, and 32 GB RAM, recreated Gustav & Paul vocal chains, and polished first releases with the UADx 1176.
+                            Led single and EP projects end to end, coordinating vocal production, mix prep, and launch assets for independent artists.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="240">
                         <span class="timeline__year">2022</span>
-                        <h3>Dual-boot & PC tweaks</h3>
+                        <h3>Workflow engineering</h3>
                         <p>
-                            Set up a Z390 AORUS PRO, overclocked the RX 6750 XT, and built a Windows/Arch/KDE dual-boot to separate web security tests from beat workflows.
+                            Integrated cross-platform tooling to streamline production, backup, and testing pipelines for hybrid creative-technological teams.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="360">
                         <span class="timeline__year">2020</span>
-                        <h3>First beat, first dream</h3>
+                        <h3>Independent launch</h3>
                         <p>
-                            Recreated 01099's "Albau" as my first beat and decided to fuse music production with secure tech solutions.
+                            Released the first independent production and established a dual focus on music creation and digital product development.
                         </p>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="section skills" id="skills">
-            <div class="container">
-                <div class="section__header reveal" data-delay="0">
-                    <h2 class="section__title">Tools & Superpowers</h2>
-                    <p>The gear and skills I use to link beats, security, and systems.</p>
-                </div>
-                <div class="skills__grid">
-                    <article class="skill-card reveal" data-delay="0">
-                        <h3>Production & Composition</h3>
-                        <p>01099/Jazeek vibe, 100-130 BPM, hook writing, recording & arrangement.</p>
-                        <ul>
-                            <li>FL Studio as main DAW</li>
-                            <li>UADx 1176 FET, FabFilter Pro-Q 3</li>
-                            <li>Mic Mod chains inspired by Gustav & Paul</li>
-                        </ul>
-                    </article>
-                    <article class="skill-card reveal" data-delay="120">
-                        <h3>Sound Design & Mixing</h3>
-                        <p>Vocal sculpting, layering, mastering with a clean 01099 punch.</p>
-                        <ul>
-                            <li>ESI U22 XT interface</li>
-                            <li>Neumann XLR mic + chains</li>
-                            <li>Reference sessions in the home studio</li>
-                        </ul>
-                    </article>
-                    <article class="skill-card reveal" data-delay="240">
-                        <h3>Interactive Audio Dev</h3>
-                        <p>Web audio, secure APIs, and scripting for collaborative sessions.</p>
-                        <ul>
-                            <li>TypeScript, Node.js & OAuth</li>
-                            <li>CSRF/XSS prevention</li>
-                            <li>DataStores & webhooks</li>
-                        </ul>
-                    </article>
-                    <article class="skill-card reveal" data-delay="360">
-                        <h3>Systems & Performance</h3>
-                        <p>PC builds, overclocking setups, and local automations for artists.</p>
-                        <ul>
-                            <li>Z390 AORUS PRO tuning</li>
-                            <li>Windows/Linux dual boots</li>
-                            <li>Automated PC tweak tools</li>
-                        </ul>
                     </article>
                 </div>
             </div>
@@ -221,23 +182,23 @@
             <div class="container">
                 <div class="spotlight__grid">
                     <article class="spotlight__item reveal" data-delay="0">
-                        <h3>Albau (01099) Re-Make</h3>
+                        <h3>Campaign Rework</h3>
                         <p>
-                            Reverse-engineered drums, chords, and vocal chains from "Albau" using FL Studio and brought the groove into my home studio setup.
+                            Produced a rights-cleared reinterpretation for a live campaign, delivering arrangement updates, playback stems, and technical documentation.
                         </p>
-                        <span class="tag">Community favorite project</span>
+                        <span class="tag">Delivered</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="120">
                         <h3>Secure Beat API</h3>
                         <p>
-                            REST API with token auth, CSRF guards, and rate limits so friends can share FL session files securely.
+                            Designed a token-based collaboration service with multi-factor access, audit logging, and automated session expiry.
                         </p>
                         <span class="tag">Work in Progress</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="240">
                         <h3>TweakDash Local</h3>
                         <p>
-                            Local web app that triggers overclocking profiles, audio latency modes, and backup scripts on my dual-boot system with one click.
+                            Built a local control panel that orchestrates performance profiles, low-latency audio modes, and scheduled backups for studio systems.
                         </p>
                         <span class="tag">Beta</span>
                     </article>
@@ -250,8 +211,8 @@
                 <div class="contact__inner reveal" data-delay="0">
                     <h2 class="section__title">Let's connect beats & builds</h2>
                     <p>
-                        I'm lining up collabs for 2026: 01099-vibe productions, vocal chains, secure web integrations, or tech workshops for artists.
-                        Tell me about your project and we'll craft the sound plus the system behind it.
+                        Open for production mandates, audio post projects, and technical integrations that support artists, agencies, and brands.
+                        Share a short brief and we'll scope the sound and the system behind it.
                     </p>
                     <div class="contact__actions">
                         <a class="btn primary" href="mailto:privataury@gmail.com">privataury@gmail.com</a>
