--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a href="#release">Release</a>
                 <a href="#about">About</a>
                 <a href="#timeline">Journey</a>
+                <a href="#skills">Skills</a>
                 <a href="#contact">Contact</a>
                 <a href="#impressum">Impressum</a>
             </nav>
@@ -74,19 +75,27 @@
                         <span class="release__meta">Latest Release</span>
                         <h2 class="section__title">LILA FANTA</h2>
                         <p>
-                            Stream the album directly on Spotify and reach out for licensing, remix, or production inquiries.
+                            Stream the current single and reach out for licensing, remix, or production inquiries.
                         </p>
-                        <div class="release__embed">
-                            <iframe
-                                title="Spotify album player"
-                                style="border-radius: 12px"
-                                src="https://open.spotify.com/embed/album/59uIX8D3SOCtkVpQPg8YoO?utm_source=generator"
-                                width="100%"
-                                height="352"
-                                frameborder="0"
-                                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                                loading="lazy"
-                            ></iframe>
+                        <div class="release__player" data-player>
+                            <button class="player__control player__play" type="button" aria-label="Play track">
+                                <span class="player__icon player__icon--play" aria-hidden="true"></span>
+                            </button>
+                            <div class="player__track">
+                                <span class="player__time player__time--current">0:00</span>
+                                <input class="player__seek" type="range" value="0" min="0" max="100" step="0.1" aria-label="Track position" disabled />
+                                <span class="player__time player__time--total">0:00</span>
+                            </div>
+                            <div class="player__volume">
+                                <button class="player__control player__mute" type="button" aria-label="Mute">
+                                    <span class="player__icon player__icon--volume" aria-hidden="true"></span>
+                                </button>
+                                <input class="player__volume-slider" type="range" min="0" max="1" step="0.05" value="1" aria-label="Volume" />
+                            </div>
+                            <audio class="player__audio" preload="metadata">
+                                <source src="assets/js/audio/LILA-FANTA-7%20(mp3cut.net).mp3" type="audio/mpeg" />
+                                Your browser does not support the audio element.
+                            </audio>
                         </div>
                     </div>
                 </div>
@@ -165,6 +174,53 @@
                         <p>
                             Released the first independent production and established a dual focus on music creation and digital product development.
                         </p>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="section skills" id="skills">
+            <div class="container">
+                <div class="section__header reveal" data-delay="0">
+                    <h2 class="section__title">Integrated Capabilities</h2>
+                    <p>Production expertise and technical services designed to support reliable releases.</p>
+                </div>
+                <div class="skills__grid">
+                    <article class="skill-card reveal" data-delay="0">
+                        <h3>Production & Composition</h3>
+                        <p>End-to-end music production, arrangement, and vocal direction.</p>
+                        <ul>
+                            <li>Songwriting and arrangement for pop and hip-hop</li>
+                            <li>Vocal production, comping, and tuning</li>
+                            <li>Release strategy and asset coordination</li>
+                        </ul>
+                    </article>
+                    <article class="skill-card reveal" data-delay="120">
+                        <h3>Sound Design & Mixing</h3>
+                        <p>Mix-ready stems with precise editing, dynamics, and tonal balance.</p>
+                        <ul>
+                            <li>Detailed editing and restoration</li>
+                            <li>Dynamic and spectral processing</li>
+                            <li>Reference-based quality control</li>
+                        </ul>
+                    </article>
+                    <article class="skill-card reveal" data-delay="240">
+                        <h3>Interactive Audio Dev</h3>
+                        <p>Secure tooling and automation for creative collaboration.</p>
+                        <ul>
+                            <li>TypeScript and Node.js services</li>
+                            <li>Authentication and access control</li>
+                            <li>Automated deployment pipelines</li>
+                        </ul>
+                    </article>
+                    <article class="skill-card reveal" data-delay="360">
+                        <h3>Systems & Performance</h3>
+                        <p>Infrastructure oversight that keeps creative systems stable.</p>
+                        <ul>
+                            <li>Architecture and workflow assessments</li>
+                            <li>Performance tuning for production environments</li>
+                            <li>Backup and monitoring automation</li>
+                        </ul>
                     </article>
                 </div>
             </div>
